Dont hardcode mail in contact page

--- a/projects/WebsiteFrontend/src/app/pages/home/home.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
             <div class="home-info shadow-large">
                 <h3>Hi, I'm Rickie!</h3>
                 <p>
-                    I'm a passionate software developer currently working in the video games industry
+                    I'm a passionate software developer with multiple years working in the video games industry
                 </p>
 
                 <br><br>
