--- a/projects/WebsiteFrontend/src/app/pages/contact/contact.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/contact/contact.component.html
@@ -1,20 +1,10 @@
 <div id="block">
     <div class="block-test">
-        <profile></profile>
-    </div>
-</div>
-
-<div id="education">
-    <div class="education-block">
-        <table>
-            <tr>
-                <td></td>
-            </tr>
-            <tr>
-                <td>E-Mail</td>
-                <td><input class="inputCopy" type="text" value={{contactInfo.email}} id="myInput" readonly></td>
-                <td><button class="btn btn-info" onclick="copy()"><i class="fa fa-clipboard" aria-hidden="true"></i></button></td>
-            </tr>
-        </table>
+        <profile 
+            [avatarImage]="avatarImage"
+            [contactInfo]="contactInfo"
+            [role]="role"
+            [location]="location">
+        </profile>
     </div>
 </div>
