--- a/projects/WebsiteFrontend/src/app/pages/home/home.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/home/home.component.html
@@ -5,7 +5,12 @@
             <div class="home-info shadow-large">
                 <h3>Hi, I'm Rickie!</h3>
                 <p>
-                    I'm a passionate software developer with multiple years working in the video games industry
+                    I am a passionate software developer with multiple years experience working in the video game industry. 
+                    I have worked on multiple PC and Mobile games (both free-to-play and buy-to-play) through all stages of development.
+                </p>
+                <p style="padding-top: 15px;">
+                    Throughout my career I have always shown a high level of initiative and commitment towards the different projects
+                    and worked hard to achieve the best possible results.
                 </p>
 
                 <br><br>
