--- a/projects/WebsiteFrontend/src/app/pages/home/home.component.less
+++ b/projects/WebsiteFrontend/src/app/pages/home/home.component.less
@@ -1,7 +1,7 @@
 .home-info {
     position: relative;
     width: 100%;
-    height: 700px;
+    height: 800px;
     margin: 0 auto 30px auto;
     padding: 15px;
     overflow: hidden;
@@ -15,4 +15,6 @@ h3 {
 
 p {
     font-size: 20px;
+    margin-left: 15%;
+    margin-right: 15%;
 }
