--- a/projects/JavaFXApps/ColorPuzzle/src/main/resources/net/rickiekarp/colorpuzzlefx/view/FinishedView.fxml
+++ b/projects/JavaFXApps/ColorPuzzle/src/main/resources/net/rickiekarp/colorpuzzlefx/view/FinishedView.fxml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.rickiekarp.colorpuzzlefx.view.FinishedView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.rickiekarp.colorpuzzlefx.view.FinishedView">
 <children><VBox alignment="CENTER" spacing="10.0">
 <children><Label fx:id="finishedLabel" text="You finished the Game">
 <font>
