Major rework of color theme

--- a/projects/WebsiteFrontend/src/app/app.component.html
+++ b/projects/WebsiteFrontend/src/app/app.component.html
@@ -7,7 +7,7 @@
         <ul class="nav navbar-nav" routerLinkActive="active">
             <li class="nav-item"><a class="nav-link" routerLink="home"><label>Home</label></a></li>
             <li class="nav-item"><a class="nav-link" routerLink="projects"><label>Projects</label></a></li>
-            <li class="nav-item"><a class="nav-link" routerLink="about"><label>Résumé</label></a></li>
+            <li class="nav-item"><a class="nav-link" routerLink="about"><label>Resume</label></a></li>
             <li class="nav-item"><a class="nav-link" routerLink="contact"><label>Contact</label></a></li>
         </ul>
         <ul class="nav navbar-nav" routerLinkActive="active">
