--- a/projects/WebsiteFrontend/src/app/pages/contact/contact.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div id="block">
-    <div class="block-test">
+    <div class="block-panel shadow-large">
         <profile 
             [avatarImage]="avatarImage"
             [contactInfo]="contactInfo"
