--- a/projects/WebsiteFrontend/src/app/pages/home/home.component.less
+++ b/projects/WebsiteFrontend/src/app/pages/home/home.component.less
@@ -1,3 +1,5 @@
+@import '../../../style.less';
+
 .home-info {
     position: relative;
     width: 100%;
@@ -5,7 +7,7 @@
     margin: 0 auto 30px auto;
     padding: 15px;
     overflow: hidden;
-    background: #1a1c1f;
+    background-color: @background-dark;
     border-radius: 4px;
 }
 
