--- a/projects/WebsiteFrontend/src/app/pages/login/login.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
-<div id="education">
-    <div class="education-block">
+<div class="login">
+    <div class="login-block shadow-large">
         <h2>Login</h2>
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
