--- a/projects/WebsiteFrontend/src/app/pages/register/register.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
-<div id="education">
-    <div class="education-block">
+<div id="register">
+    <div class="register-block shadow-large">
     <h2>Register</h2>
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
