--- a/projects/WebsiteFrontend/src/app/app.component.less
+++ b/projects/WebsiteFrontend/src/app/app.component.less
@@ -1,3 +1,9 @@
+@import '../style.less';
+
+.navbar {
+    padding: .2rem 1rem;
+}
+
 .navbar-brand {
     display: inline-block;
     padding-top: .3125rem;
@@ -8,8 +14,7 @@
 }
 
 nav {
-    background-color: #1a1c1f;
-    height: 70px;
+    background-color: @background-dark;
     width: 100%;
     list-style: none;
 }
@@ -51,9 +56,4 @@ label:hover {
     color: #fff;
     cursor: pointer;
     border: 0px solid #ddd;
-    background: #171717
-}
-
-label:hover { 
-    background-color: #111111;
 }
