--- a/projects/WebsiteFrontend/src/app/pages/about/about.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/about/about.component.html
@@ -1,7 +1,9 @@
-<div id="content" *ngIf="experienceInfo.length > 0">
+<div id="timelineContent" *ngIf="experienceInfo.length > 0">
     <h2 class="heading">Experience</h2>
 
-    <ul class="timeline">
+
+
+    <ul class="timeline shadow-large">
         <li class="event" *ngFor="let exp of experienceInfo" data-date="">
             <h3>{{exp.name}}</h3>
             <h4>{{exp.jobTitle}}</h4>
@@ -18,7 +20,7 @@
 
 <div id="education" *ngIf="educationInfo.length > 0">
     <h2 class="heading">Education</h2>
-    <div class="education-block">
+    <div class="education-block shadow-large">
         <h3>University of Hamburg</h3>
         <span class="education-date">August 2015 - February 2016</span>
         <h4>Computer Science</h4>
@@ -28,7 +30,7 @@
     </div>
     <!-- End .education-block -->
 
-    <div class="education-block">
+    <div class="education-block shadow-large">
         <h3>Berufliche Schule Elmshorn</h3>
         <span class="education-date">August 2011 - June 2012</span>
         <h4>Berufsoberschule (Field of studies - Economics)</h4>
@@ -38,7 +40,7 @@
     </div>
     <!-- End .education-block -->
 
-    <div class="education-block">
+    <div class="education-block shadow-large">
         <h3>Berufliche Schule Elmshorn</h3>
         <span class="education-date">August 2009 - June 2011</span>
         <h4>Berufsfachschule (Field of studies - Foreign languages)</h4>
@@ -55,7 +57,7 @@
 <div id="skills" *ngIf="skillsInfo.length > 0">
     <h2 class="heading">Skills</h2>
     <ul>
-        <li *ngFor="let skill of skillsInfo">
+        <li class="shadow-large" *ngFor="let skill of skillsInfo">
             {{ skill.text }}
         </li>
     </ul>
