--- a/projects/WebsiteFrontend/src/app/pages/project/project.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/project/project.component.html
@@ -31,41 +31,35 @@
                         </ul>
                         <br><br>
                         <iframe *ngIf="project.trailerUrl != null" width="100%" height="526" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                </div>
+                        <div *ngIf="imageUrls.length > 0">
+                            <slideshow #slideshow
+                                [imageUrls]="imageUrls"
+                                [height]="height"
+                                [minHeight]="minHeight"
+                                [arrowSize]="arrowSize"
+                                [showArrows]="showArrows"
+                                [disableSwiping]="disableSwiping"
+                                [autoPlay]="autoPlay"
+                                [stopAutoPlayOnSlide]="stopAutoPlayOnSlide"
+                                [debug]="debug"
+                                [backgroundSize]="backgroundSize"
+                                [backgroundPosition]="backgroundPosition"
+                                [backgroundRepeat]="backgroundRepeat"
+                                [showDots]="showDots"
+                                [dotColor]="dotColor"
+                                [showCaptions]="showCaptions"
+                                [captionColor]="captionColor"
+                                [captionBackground]="captionBackground"
+                                [lazyLoad]="lazyLoad"
+                                [hideOnNoSlides]="hideOnNoSlides"
+                                [fullscreen]="fullscreen">
+                                </slideshow>
+                        </div>
+                    </div>
                 <!-- End .education-block -->
-
-
             </div>
             <!-- End #education -->
-
         </div>
-
-        <div style="margin-left: 20%; margin-right: 20%" *ngIf="imageUrls.length > 0">
-            <slideshow #slideshow
-                [imageUrls]="imageUrls"
-                [height]="height"
-                [minHeight]="minHeight"
-                [arrowSize]="arrowSize"
-                [showArrows]="showArrows"
-                [disableSwiping]="disableSwiping"
-                [autoPlay]="autoPlay"
-                [stopAutoPlayOnSlide]="stopAutoPlayOnSlide"
-                [debug]="debug"
-                [backgroundSize]="backgroundSize"
-                [backgroundPosition]="backgroundPosition"
-                [backgroundRepeat]="backgroundRepeat"
-                [showDots]="showDots"
-                [dotColor]="dotColor"
-                [showCaptions]="showCaptions"
-                [captionColor]="captionColor"
-                [captionBackground]="captionBackground"
-                [lazyLoad]="lazyLoad"
-                [hideOnNoSlides]="hideOnNoSlides"
-                [fullscreen]="fullscreen">
-             </slideshow>
-        </div>
-        
-
         
 </div>
 
