--- a/projects/WebsiteFrontend/src/app/pages/project/project.component.less
+++ b/projects/WebsiteFrontend/src/app/pages/project/project.component.less
@@ -1,21 +1,23 @@
+@import '../../../style.less';
+
 .centerDiv
 {
    color: white;
    max-width: 900px;
    margin: 0 auto;
-   background-color:#1a1c1f;
+   background-color:@background-dark;
 }
 .card-image-left
 {
    width: 30%;
    height: 100%;
-   background-color:#1a1c1f ;
+   background-color:@background-dark;
    float:left;
 }
 .card-content-right
 {
    width: 70%;
-   background-color:#1a1c1f ;
+   background-color:@background-dark;
    float:right;
    flex: 1 1 auto;
    padding: 1rem;
@@ -23,7 +25,7 @@
 
 .card {
    color: #ffffff;
-   background: #1a1c1f;
+   background: @background-dark;
    min-width: 900px;
 }
 
@@ -31,3 +33,63 @@
    height: auto;
    min-height: 100%;
 }
+
+
+#education {
+   width: 100%;
+   padding:20px 15px 20px 15px;
+   border-bottom:0px solid #dcd9d9;
+   text-align:center;
+   background: @background;
+ }
+ #education h2 {
+   color:#dcd9d9;
+   margin-bottom:50px
+ }
+ 
+ .education-block{
+   max-width:900px;
+   margin:0 auto 0 auto;
+   padding:15px;
+   text-align:left;
+   background: @background-dark;
+ }
+ .education-block h3{
+   font-weight:500;
+   float:left;
+   margin:0;
+   color:#a3a9ad
+ }
+ .education-block span{
+   color:#a3a9ad;
+   float:right
+ }
+ .education-block h4{
+   color:#a3a9ad;
+   clear:both;
+   font-weight:500;
+   margin:0 0 15px 0
+ }
+ .education-block p,.education-block ul{
+   margin:0;
+   color:#ffffff;
+   font-size:1.1em
+ }
+ .education-block ul{
+   padding:0 0 0 15px
+ }
+
+
+.tile_div a {
+   width: 100px;
+   margin: 10px;
+ }
+ 
+.title_div a.last {
+   margin-right: 0;
+}
+ 
+ .clear {
+   clear: both;
+ }
+ 
