--- a/projects/WebsiteFrontend/src/app/pages/projects/projects.component.html
+++ b/projects/WebsiteFrontend/src/app/pages/projects/projects.component.html
@@ -1,15 +1,11 @@
 <div id="projects">
-
         <div class="container">
             <h2 class="heading">Professional</h2>
             <div class="c0144 c0156 c0157">
-    
-                <div class="c01159">
+                    
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'kingdomunderfire2']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-kuf2.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-kuf2.png" />
                         <div class="project-info">
                             <h3>Kingdom Under Fire 2</h3>
                             <p>
@@ -21,12 +17,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'guardiansofember']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-goe.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-goe.png" />
                         <div class="project-info">
                             <h3>Guardians of Ember</h3>
                             <p>
@@ -38,12 +31,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'battlehordes']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-bh.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-bh.png" />
                         <div class="project-info">
                             <h3>Battle Hordes</h3>
                             <p>
@@ -55,12 +45,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'lordsandknights']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-lk.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-lk.png" />
                         <div class="project-info">
                             <h3>Lords & Knights</h3>
                             <p>
@@ -72,12 +59,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'bigfarm']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-bf.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-bf.png" />
                         <div class="project-info">
                             <h3>Goodgame BigFarm</h3>
                             <p>
@@ -89,12 +73,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'empirefourkingdoms']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-e4k.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-e4k.png" />
                         <div class="project-info">
                             <h3>Empire: Four Kingdoms</h3>
                             <p>
@@ -106,12 +87,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'empire']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-ep.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-ep.png" />
                         <div class="project-info">
                             <h3>Goodgame Empire</h3>
                             <p>
@@ -128,12 +106,9 @@
             <h2 class="heading">Private</h2>
             <div class="c0144 c0156 c01384">
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'snakefx']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-snakefx.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-snakefx.png" />
                         <div class="project-info">
                             <h3>SnakeFX</h3>
                             <p>
@@ -145,12 +120,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'homebackend']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-homebackend.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-homebackend.png" />
                         <div class="project-info">
                             <h3>Home Automation</h3>
                             <p>
@@ -162,12 +134,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'sha1pass']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-sha1pass.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-sha1pass.png" />
                         <div class="project-info">
                             <h3>SHA1Pass</h3>
                             <p>
@@ -179,12 +148,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'filelistcreator']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-filelistcreator.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-filelistcreator.png" />
                         <div class="project-info">
                             <h3>FilelistCreator</h3>
                             <p>
@@ -196,12 +162,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'botmanager']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-botmanager.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-botmanager.png" />
                         <div class="project-info">
                             <h3>Web Bot</h3>
                             <p>
@@ -213,12 +176,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'assistant']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-assistant.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-assistant.png" />
                         <div class="project-info">
                             <h3>Assistant</h3>
                             <p>
@@ -230,12 +190,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'reddit']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-reddit.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-reddit.png" />
                         <div class="project-info">
                             <h3>RedditIsFun (Fork)</h3>
                             <p>
@@ -247,12 +204,9 @@
                 </div>
                 <!-- End .project -->
     
-                <div class="c01159">
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'university']">
-                        <div class="project-image">
-                            <img src="assets/images/logo-unihh.png" />
-                        </div>
-                        <!-- End .project-image -->
+                        <img src="assets/images/logo-unihh.png" />
                         <div class="project-info">
                             <h3>University</h3>
                             <p>
