--- a/projects/WebsiteFrontend/src/app/shared/components/popover/profile/profile-popover.component.scss
+++ b/projects/WebsiteFrontend/src/app/shared/components/popover/profile/profile-popover.component.scss
@@ -22,7 +22,8 @@
     background: transparent;
     height: 59px;
     &:hover {
-      background: #111111;
+      color: #fff;
+      cursor: pointer;
     }
     &:focus {
       outline: none;
@@ -31,18 +32,20 @@
 
 .menu-item {
   display: block;
-  background: black;
+  background: #111111;
   color: white;
   padding: 16px;
   border: none;
+  min-width: 150px;
   width: 100%;
   border-radius: 0;
 
   &:focus {
     outline: none;
-    background: rgba(0,0,0,0.06);
+    background: darken(#001d3f, 8%);
   }
   &:hover {
-    background: #2a2e35;
+    background:darken(#001d3f, 8%);
+    cursor: pointer;
   }
 }
