Update angular website dependencies

--- a/projects/WebsiteFrontendLegacy/src/app/pages/home/home.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/home/home.component.html
@@ -39,7 +39,7 @@
                 </slideshow>
 
                 <br><br>
-                <button routerLink="/contact" class="btn btn-info">Contact me</button>
+                <button routerLink="/contact" class="btn btn-info" style="padding: 15px 32px;">Contact me</button>
 
             </div>
             <!-- End .home-info -->
