--- a/projects/WebsiteFrontendLegacy/src/app/pages/projects/projects.component.less
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/projects/projects.component.less
@@ -1,8 +1,15 @@
 @import '../../../style.less';
 
+.container {
+  @media (min-width: 1300px) {
+    max-width: 1640px;
+
+  }
+}
+
 .c0144 {
     width: 100%;
-    max-width: 1240px;
+    max-width: 1640px;
   }
   .c0156 {
     display: flex;
@@ -11,7 +18,6 @@
   
   
   .c01159 {
-
     @media screen and (min-width: 768px) {
       .c01159 {
         max-width: 33%;
@@ -28,7 +34,6 @@
     margin: 0px 25px 25px 25px;
     margin-left: auto;
     margin-right: auto;
-  
   }
   
   .c01160 {
