--- a/projects/WebsiteFrontendLegacy/src/app/pages/about/about.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/about/about.component.html
@@ -25,7 +25,7 @@
         <span class="education-date">August 2015 - February 2016</span>
         <h4>Computer Science</h4>
         <p>
-            Attended computer science classes for one semester
+            Attended computer science classes
         </p>
     </div>
     <!-- End .education-block -->
