--- a/projects/WebsiteFrontendLegacy/src/app/pages/projects/projects.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/projects/projects.component.html
@@ -2,10 +2,24 @@
         <div class="container">
             <h2 class="heading">Professional</h2>
             <div class="c0144 c0156 c0157">
-                    
+                
+                <div class="c01159 shadow-large">
+                    <div class="c01160 c01105" [routerLink]="['/projects', 'soulworkeranimelegends']">
+                        <img src="assets/images/projects/professional/soulworker/logo-soulworkeranimelegends.png" />
+                        <div class="project-info">
+                            <h3>Soulworker Anime Legends</h3>
+                            <p>
+                                MMORPG
+                            </p>
+                        </div>
+                        <!-- End .project-info -->
+                    </div>
+                </div>
+                <!-- End .project -->
+
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'kingdomunderfire2']">
-                        <img src="assets/images/logo-kuf2.png" />
+                        <img src="assets/images/projects/professional/kuf2/logo-kuf2.jpg" />
                         <div class="project-info">
                             <h3>Kingdom Under Fire 2</h3>
                             <p>
@@ -19,7 +33,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'guardiansofember']">
-                        <img src="assets/images/logo-goe.png" />
+                        <img src="assets/images/projects/professional/guardiansofember/logo-goe.jpg" />
                         <div class="project-info">
                             <h3>Guardians of Ember</h3>
                             <p>
@@ -33,7 +47,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'battlehordes']">
-                        <img src="assets/images/logo-bh.png" />
+                        <img src="assets/images/projects/professional/logo-bh.png" />
                         <div class="project-info">
                             <h3>Battle Hordes</h3>
                             <p>
@@ -47,7 +61,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'lordsandknights']">
-                        <img src="assets/images/logo-lk.png" />
+                        <img src="assets/images/projects/professional/logo-lk.png" />
                         <div class="project-info">
                             <h3>Lords & Knights</h3>
                             <p>
@@ -61,7 +75,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'bigfarm']">
-                        <img src="assets/images/logo-bf.png" />
+                        <img src="assets/images/projects/professional/logo-bf.png" />
                         <div class="project-info">
                             <h3>Goodgame BigFarm</h3>
                             <p>
@@ -75,7 +89,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'empirefourkingdoms']">
-                        <img src="assets/images/logo-e4k.png" />
+                        <img src="assets/images/projects/professional/logo-e4k.png" />
                         <div class="project-info">
                             <h3>Empire: Four Kingdoms</h3>
                             <p>
@@ -89,7 +103,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'empire']">
-                        <img src="assets/images/logo-ep.png" />
+                        <img src="assets/images/projects/professional/logo-ep.png" />
                         <div class="project-info">
                             <h3>Goodgame Empire</h3>
                             <p>
@@ -108,7 +122,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'snakefx']">
-                        <img src="assets/images/logo-snakefx.png" />
+                        <img src="assets/images/projects/private/logo-snakefx.png" />
                         <div class="project-info">
                             <h3>SnakeFX</h3>
                             <p>
@@ -122,11 +136,11 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'homebackend']">
-                        <img src="assets/images/logo-homebackend.png" />
+                        <img src="assets/images/projects/private/logo-homebackend.png" />
                         <div class="project-info">
                             <h3>Home Automation</h3>
                             <p>
-                                Home Server
+                                Raspberry Pi
                             </p>
                         </div>
                         <!-- End .project-info -->
@@ -136,7 +150,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'sha1pass']">
-                        <img src="assets/images/logo-sha1pass.png" />
+                        <img src="assets/images/projects/private/logo-sha1pass.png" />
                         <div class="project-info">
                             <h3>SHA1Pass</h3>
                             <p>
@@ -150,7 +164,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'filelistcreator']">
-                        <img src="assets/images/logo-filelistcreator.png" />
+                        <img src="assets/images/projects/private/logo-filelistcreator.png" />
                         <div class="project-info">
                             <h3>FilelistCreator</h3>
                             <p>
@@ -164,7 +178,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'botmanager']">
-                        <img src="assets/images/logo-botmanager.png" />
+                        <img src="assets/images/projects/private/logo-botmanager.png" />
                         <div class="project-info">
                             <h3>Web Bot</h3>
                             <p>
@@ -178,7 +192,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'assistant']">
-                        <img src="assets/images/logo-assistant.png" />
+                        <img src="assets/images/projects/private/logo-assistant.png" />
                         <div class="project-info">
                             <h3>Assistant</h3>
                             <p>
@@ -192,7 +206,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'reddit']">
-                        <img src="assets/images/logo-reddit.png" />
+                        <img src="assets/images/projects/private/logo-reddit.png" />
                         <div class="project-info">
                             <h3>RedditIsFun (Fork)</h3>
                             <p>
@@ -206,9 +220,9 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'university']">
-                        <img src="assets/images/logo-unihh.png" />
+                        <img src="assets/images/projects/private/logo-unihh.png" />
                         <div class="project-info">
-                            <h3>University</h3>
+                            <h3>University Hamburg</h3>
                             <p>
                                 Assignment collection
                             </p>
