--- a/projects/WebsiteFrontendLegacy/src/app/shared/components/profile/profile.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/shared/components/profile/profile.component.html
@@ -27,19 +27,24 @@
       <h4>Social</h4>
       <ul class="contact-way-item">
         <li class="contact-way-list">
-          <a href="https://gitlab.com/rickie.karp" target="_blank" class="info-icon fa fa-gitlab"></a>
-        </li>
-        <li class="contact-way-list">
-          <a href="https://git.rickiekarp.net" target="_blank" class="info-icon fa fa-git-square"></a>
+          <a href="https://www.xing.com/profile/Rickie_Karp" target="_blank" class="info-icon fa fa-xing"></a>
         </li>
         <li class="contact-way-list">
           <a href="https://www.linkedin.com/in/rickiekarp/" target="_blank" class="info-icon fa fa-linkedin"></a>
         </li>
         <li class="contact-way-list">
-          <a href="https://www.xing.com/profile/Rickie_Karp" target="_blank" class="info-icon fa fa-xing"></a>
+            <a href="https://twitter.com/rickiekarp" target="_blank" class="info-icon fa fa-twitter"></a>
+        </li>
+      </ul>
+      <ul class="contact-way-item">
+        <li class="contact-way-list">
+          <a href="https://git.rickiekarp.net" target="_blank" class="info-icon fa fa-git-square"></a>
         </li>
         <li class="contact-way-list">
-            <a href="https://twitter.com/rickiekarp" target="_blank" class="info-icon fa fa-twitter"></a>
+          <a href="https://github.com/rickieka" target="_blank" class="info-icon fa fa-github"></a>
+        </li>
+        <li class="contact-way-list">
+          <a href="https://gitlab.com/rickie.karp" target="_blank" class="info-icon fa fa-gitlab"></a>
         </li>
       </ul>
   </div>
