Make registration page visible

--- a/projects/WebsiteFrontendLegacy/src/app/pages/userarea/userarea.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/userarea/userarea.component.html
@@ -11,3 +11,9 @@
     <h3>Inline Edit Example</h3>
     <app-edit-example></app-edit-example>
 </div>
+
+<!-- Copyright -->
+<div class="footer-copyright text-center py-3">© 2021
+    <a href="https://rickiekarp.net/"> rickiekarp.net</a>
+</div>
+<!-- Copyright -->
