--- a/projects/WebsiteFrontendLegacy/src/app/pages/login/login.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/login/login.component.html
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<!-- <div id="projects">
+<div id="projects">
     <div class="container">
         <div class="row">
             <div class="project shadow-large">
@@ -35,4 +35,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
