--- a/projects/WebsiteFrontendLegacy/src/app/pages/home/home.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/home/home.component.html
@@ -8,38 +8,35 @@
                     I am a passionate software developer with multiple years experience working in the video game industry. 
                     I have worked on multiple PC and Mobile games (both free-to-play and buy-to-play) through all stages of development.
                 </p>
-                <p style="padding-top: 15px;">
+                <p style="padding-top: 10px;">
                     Throughout my career I have always shown a high level of initiative and commitment towards the different projects
                     and worked hard to achieve the best possible results.
                 </p>
 
                 <br><br>
-                <h5>Feel free to check out some of the projects I have been involved in</h5>
-                <slideshow #slideshow
-                    [imageUrls]="imageUrls"
-                    [height]="height"
-                    [minHeight]="minHeight"
-                    [arrowSize]="arrowSize"
-                    [showArrows]="showArrows"
-                    [disableSwiping]="disableSwiping"
-                    [autoPlay]="autoPlay"
-                    [stopAutoPlayOnSlide]="stopAutoPlayOnSlide"
-                    [debug]="debug"
-                    [backgroundSize]="backgroundSize"
-                    [backgroundPosition]="backgroundPosition"
-                    [backgroundRepeat]="backgroundRepeat"
-                    [showDots]="showDots"
-                    [dotColor]="dotColor"
-                    [showCaptions]="showCaptions"
-                    [captionColor]="captionColor"
-                    [captionBackground]="captionBackground"
-                    [lazyLoad]="lazyLoad"
-                    [hideOnNoSlides]="hideOnNoSlides"
-                    [fullscreen]="fullscreen">
-                </slideshow>
+                <h5>Check out some of the projects I have been involved in</h5>
+                <div style="margin: auto; width: 50%;">
+                    <mat-carousel
+                    timings="250ms ease-in"
+                    [autoplay]="true"
+                    interval="2500"
+                    proportion=66
+                    [loop]="true"
+                    [useKeyboard]="true"
+                    >
+                        <mat-carousel-slide
+                        *ngFor="let slide of slides; let i = index"
+                        [image]="slide.image"
+                        overlayColor="#00000040"
+                        [hideOverlay]="true"
+                        ></mat-carousel-slide>
+                    </mat-carousel>
+                </div>
+
 
                 <br><br>
                 <button routerLink="/contact" class="btn btn-info" style="padding: 15px 32px;">Contact me</button>
+                <br><br>
 
             </div>
             <!-- End .home-info -->
