--- a/projects/WebsiteFrontendLegacy/src/app/pages/project/project.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/project/project.component.html
@@ -31,30 +31,21 @@
                         </ul>
                         <br><br>
                         <iframe *ngIf="project.trailerUrl != null" width="100%" height="526" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                        <div *ngIf="imageUrls.length > 0">
-                            <slideshow #slideshow
-                                [imageUrls]="imageUrls"
-                                [height]="height"
-                                [minHeight]="minHeight"
-                                [arrowSize]="arrowSize"
-                                [showArrows]="showArrows"
-                                [disableSwiping]="disableSwiping"
-                                [autoPlay]="autoPlay"
-                                [stopAutoPlayOnSlide]="stopAutoPlayOnSlide"
-                                [debug]="debug"
-                                [backgroundSize]="backgroundSize"
-                                [backgroundPosition]="backgroundPosition"
-                                [backgroundRepeat]="backgroundRepeat"
-                                [showDots]="showDots"
-                                [dotColor]="dotColor"
-                                [showCaptions]="showCaptions"
-                                [captionColor]="captionColor"
-                                [captionBackground]="captionBackground"
-                                [lazyLoad]="lazyLoad"
-                                [hideOnNoSlides]="hideOnNoSlides"
-                                [fullscreen]="fullscreen">
-                                </slideshow>
-                        </div>
+                        <mat-carousel
+                        timings="250ms ease-in"
+                        [autoplay]="true"
+                        interval="2500"
+                        proportion=70
+                        [loop]="true"
+                        [useKeyboard]="true"
+                        >
+                            <mat-carousel-slide
+                            *ngFor="let slide of imageUrls; let i = index"
+                            [image]="slide.image"
+                            overlayColor="#00000040"
+                            [hideOverlay]="false"
+                            ></mat-carousel-slide>
+                    </mat-carousel>
                     </div>
                 <!-- End .education-block -->
             </div>
