Rename resume component

--- a/projects/WebsiteFrontendLegacy/src/styles.scss
+++ b/projects/WebsiteFrontendLegacy/src/styles.scss
@@ -314,14 +314,14 @@ footer{
        transform:scale(1, 1)
    }
 }
-#about{
+#resume{
    padding:75px 15px;
    border-bottom:1px solid #dcd9d9
 }
-#about h2{
+#resume h2{
    color:#fff
 }
-#about p{
+#resume p{
    color:#fff;
    margin:0
 }
