Update home component

--- a/projects/WebsiteFrontendLegacy/src/app/pages/home/home.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/home/home.component.html
@@ -5,15 +5,10 @@
             <div class="home-info shadow-large">
                 <h3>Hi, I'm Rickie!</h3>
                 <p>
-                    I am a passionate software developer with multiple years experience working in the video game industry. 
+                    I am a passionate software developer with multiple years experience working in the video game industry and 
                     I have worked on multiple PC and Mobile games (both free-to-play and buy-to-play) through all stages of development.
                 </p>
-                <p style="padding-top: 10px;">
-                    Throughout my career I have always shown a high level of initiative and commitment towards the different projects
-                    and worked hard to achieve the best possible results.
-                </p>
-
-                <br><br>
+                <br>
                 <h5>Check out some of the projects I have been involved in</h5>
                 <div style="margin: auto; width: 50%;">
                     <mat-carousel
