Update projects pages style

--- a/projects/WebsiteFrontendLegacy/src/app/pages/projects/projects.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/projects/projects.component.html
@@ -4,6 +4,20 @@
             <div class="c0144 c0156 c0157">
                 
                 <div class="c01159 shadow-large">
+                    <div class="c01160 c01105" [routerLink]="['/projects', 'gujian']">
+                        <img src="assets/images/projects/professional/gujian/logo_512x512.jpg" />
+                        <div class="project-info">
+                            <h3>Swords of Legends Online</h3>
+                            <p>
+                                MMORPG
+                            </p>
+                        </div>
+                        <!-- End .project-info -->
+                    </div>
+                </div>
+                <!-- End .project -->
+
+                <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'soulworkeranimelegends']">
                         <img src="assets/images/projects/professional/soulworker/logo-soulworkeranimelegends.png" />
                         <div class="project-info">
@@ -33,7 +47,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'guardiansofember']">
-                        <img src="assets/images/projects/professional/guardiansofember/logo-goe.jpg" />
+                        <img src="assets/images/projects/professional/guardiansofember/logo_256x256.jpg" />
                         <div class="project-info">
                             <h3>Guardians of Ember</h3>
                             <p>
@@ -47,7 +61,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'battlehordes']">
-                        <img src="assets/images/projects/professional/logo-bh.png" />
+                        <img src="assets/images/projects/professional/battlehordes/logo_256x256.jpg" />
                         <div class="project-info">
                             <h3>Battle Hordes</h3>
                             <p>
@@ -61,7 +75,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'lordsandknights']">
-                        <img src="assets/images/projects/professional/logo-lk.png" />
+                        <img src="assets/images/projects/professional/lordsandknights/logo_256x256.jpg" />
                         <div class="project-info">
                             <h3>Lords & Knights</h3>
                             <p>
@@ -75,7 +89,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'bigfarm']">
-                        <img src="assets/images/projects/professional/logo-bf.png" />
+                        <img src="assets/images/projects/professional/bigfarm/logo_256x256.jpg" />
                         <div class="project-info">
                             <h3>Goodgame BigFarm</h3>
                             <p>
@@ -89,7 +103,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'empirefourkingdoms']">
-                        <img src="assets/images/projects/professional/logo-e4k.png" />
+                        <img src="assets/images/projects/professional/empirefourkingdoms/logo_256x256.jpg" />
                         <div class="project-info">
                             <h3>Empire: Four Kingdoms</h3>
                             <p>
@@ -103,7 +117,7 @@
     
                 <div class="c01159 shadow-large">
                     <div class="c01160 c01105" [routerLink]="['/projects', 'empire']">
-                        <img src="assets/images/projects/professional/logo-ep.png" />
+                        <img src="assets/images/projects/professional/empire/logo.jpg" />
                         <div class="project-info">
                             <h3>Goodgame Empire</h3>
                             <p>
