--- a/projects/WebsiteFrontendLegacy/src/app/pages/project/project.component.html
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/project/project.component.html
@@ -2,7 +2,7 @@
         <div class="row">
 
             <div class="centerDiv">
-                <div class="card-image-left">
+                <div class="card-content-left">
                     <img class="card-img-top" src="assets/{{project.projectImage}}" alt="image">
                 </div>
                 <div class="card-content-right">
@@ -13,7 +13,6 @@
                         <a *ngIf="project.projectUrl != null" href="{{project.projectUrl}}" class="btn btn-info" target="_blank">Visit</a>
                         <a *ngIf="project.downloadUrl != null" href="{{project.downloadUrl}}" class="btn btn-info">Download</a>
                     </div>
-
                 </div>
             </div>
             <!-- End .project -->
@@ -30,7 +29,9 @@
                             </li>
                         </ul>
                         <br><br>
-                        <iframe *ngIf="project.trailerUrl != null" width="100%" height="526" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        <div *ngIf="project.trailerUrl != null">
+                            <iframe width="1280" height="720" [src]="project.trailerUrl | safe" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </div>
                         <mat-carousel
                         timings="250ms ease-in"
                         [autoplay]="true"
