--- a/projects/WebsiteFrontendLegacy/src/app/pages/project/project.component.less
+++ b/projects/WebsiteFrontendLegacy/src/app/pages/project/project.component.less
@@ -3,14 +3,19 @@
 .centerDiv
 {
    color: white;
-   max-width: 900px;
+   width: 100%;
+   max-width: 1310px;
    position: relative;
    background-color:@background-dark;
 }
-.card-image-left
+.card-content-left
 {
-   width: 30%;
    height: 100%;
+   width: 40%;
+   padding-top: 15px;
+   padding-left: 15px;
+   padding-right: 15px;
+   padding-bottom: 15px;
    background-color:@background-dark;
    float:left;
 }
@@ -18,20 +23,17 @@
 {
   position: relative;
   height: 100%;
-  width: 70%;
+  width: 60%;
   float:right;
-  top: 50%;
-  padding-top: 20px;
   padding-left: 25px;
   padding-right: 25px;
-  padding-bottom: 20px;
-  transform: translate(0%, -50%);
+  top: 25%;
 }
 
 .card {
    color: #ffffff;
    background: @background-dark;
-   min-width: 900px;
+   min-width: 1080px;
 }
 
 .card-img-top {
@@ -53,9 +55,9 @@
  }
  
  .education-block{
-   max-width:900px;
+   max-width:1310px;
    margin:0 auto 0 auto;
-   padding:15px;
+   padding: 15px;
    text-align:left;
    background: @background-dark;
  }
