--- a/projects/WebsiteFrontendLegacy/src/styles.scss
+++ b/projects/WebsiteFrontendLegacy/src/styles.scss
@@ -336,10 +336,10 @@ footer{
 
 
 #projects {
-   padding:50px 15px;
-   border-bottom:0px solid #dcd9d9;
+   padding-top: 50px;
+   border-bottom: 0px solid #dcd9d9;
    background: #002650;
-   text-align:center
+   text-align: center
 }
 .projects h2{
    color:#dcd9d9;
